[backend] settup actuator, problem, oauth2-client
